# gurobi_matrix_revisited

./: README.md  pyproject.toml
matrix_revisited/: __init__.py  experiment.py  heuristic.py  main.py  models.py  problem_data.py  utils.py
matrix_revisited/notebooks/: analysis.ipynb
matrix_revisited/problem_files/: example.prob
